more CI cleanup

--- a/.github/workflows/MacOS.yml
+++ b/.github/workflows/MacOS.yml
@@ -30,7 +30,7 @@ jobs:
         mkdir build 
         cd build
         cmake ..
-        make -j2
+        make -j2 VERBOSE=1
 
     - name: test-bufr
       run: |
