--- a/.github/workflows/Linux.yml
+++ b/.github/workflows/Linux.yml
@@ -55,7 +55,7 @@ jobs:
         mkdir build
         cd build
         cmake -DCMAKE_INSTALL_PREFIX=./install -DENABLE_PYTHON=ON ..
-        make -j2
+        make -j2 VERBOSE=1
         make install
         cd python
         sudo python3 setup.py install
