--- a/.github/workflows/developer.yml
+++ b/.github/workflows/developer.yml
@@ -23,11 +23,6 @@ jobs:
       run: |
           sudo apt-get update
           sudo apt-get install doxygen
-          sudo apt-get install python3-pip python3-dev python3-numpy
-          sudo python3 -m pip install -U pip setuptools
-          sudo python3 -m pip install -U numpy
-          sudo python3 -m pip install -U netCDF4
-          sudo python3 -m pip install -U pdoc
           sudo python3 -m pip install -U gcovr
 
     - name: checkout
@@ -43,11 +38,9 @@ jobs:
         cd bufr
         mkdir build
         cd build
-        cmake -DCMAKE_INSTALL_PREFIX=./install -DCMAKE_Fortran_FLAGS="-g -fprofile-arcs -ftest-coverage -fprofile-abs-path -O0" -DCMAKE_BUILD_TYPE=Debug -DENABLE_DOCS=On -DENABLE_PYTHON=ON ..
+        cmake -DCMAKE_INSTALL_PREFIX=./install -DCMAKE_Fortran_FLAGS="-g -fprofile-arcs -ftest-coverage -fprofile-abs-path -O0" -DCMAKE_BUILD_TYPE=Debug -DENABLE_DOCS=On ..
         make -j2 VERBOSE=1
         make install
-        cd python
-        sudo python3 setup.py install
 
     - name: test
       run: |
