debug MacOS error in OUT_7_8 test

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -135,7 +135,7 @@ endforeach()
 
 # all other OUT tests
 foreach(test_src ${test_OUT_other_srcs})
-  string(REPLACE ".F" "" testPref ${test_src})
+  string(REGEX REPLACE "(.F90|.F)" "" testPref ${test_src})
   foreach(kind ${test_kinds})
     set(test     ${testPref}_${kind})
     set(test_exe ${test}.x)
