--- a/.github/workflows/developer.yml
+++ b/.github/workflows/developer.yml
@@ -54,3 +54,9 @@ jobs:
         path: |
           bufr/build/*.html
           bufr/build/*.css
+
+    - uses: actions/upload-artifact@v2
+      with:
+        name: docs
+        path: |
+          bufr/build/docs/html
