--- a/src/bufrlib.h.in
+++ b/src/bufrlib.h.in
@@ -47,47 +47,47 @@
 **   2) a FORTRAN subprogram called from C
 */
 #ifdef UNDERSCORE
-#define arallocc   arallocc_ /** arallocc function. */
-#define ardllocc   ardllocc_ /** ardllocc function. */
-#define bort       bort_ /** bort function. */
-#define bort_exit  bort_exit_ /** exit function. */
-#define bvers      bvers_ /** bvers function. */
-#define cadn30     cadn30_ /** cadn30 function. */
-#define closbf     closbf_ /** closbf function. */
-#define cmpia      cmpia_ /** cmpia function. */
-#define cmpmsg     cmpmsg_ /** cmpmsg function. */
-#define elemdx     elemdx_ /** elemdx function. */
-#define gets1loc   gets1loc_ /** gets1loc function. */
-#define ibfms      ibfms_ /** ibfms function. */
-#define ichkstr    ichkstr_ /** ichkstr function. */
-#define icvidx     icvidx_ /** icvidx function. */
-#define ifxy       ifxy_ /** ifxy function. */
-#define igetntbi   igetntbi_ /** igetntbi function. */
-#define igetprm    igetprm_ /** igetprm function. */
-#define igettdi    igettdi_ /** igettdi function. */
-#define imrkopr    imrkopr_ /** imrkopr function. */
-#define ipkm       ipkm_ /** ipkm function. */
-#define ireadns    ireadns_ /** ireadns function. */
-#define istdesc    istdesc_ /** istdesc function. */
-#define iupb       iupb_ /** iupb function. */
-#define iupbs01    iupbs01_ /** iupbs01 function. */
-#define iupm       iupm_ /** iupm function. */
-#define maxout     maxout_ /** maxout function. */
-#define nemtab     nemtab_ /** nemtab function. */
-#define nemtbb     nemtbb_ /** nemtbb function. */
-#define nummtb     nummtb_ /** nummtb function. */
-#define numtbd     numtbd_ /** numtbd function. */
-#define openmb     openmb_ /** openmb function. */
-#define pktdd      pktdd_ /** pktdd function. */
-#define restd      restd_ /** restd function. */
-#define stntbi     stntbi_ /** stntbi function. */
-#define strnum     strnum_ /** strnum function. */
-#define stseq      stseq_ /** stseq function. */
-#define ufbint     ufbint_ /** ufbint function. */
-#define ufbseq     ufbseq_ /** ufbseq function. */
-#define uptdd      uptdd_ /** uptdd function. */
-#define wrdesc     wrdesc_ /** wrdesc function. */
-#define wrdlen     wrdlen_ /** wrdlen function. */
+#define arallocc   arallocc_  /**< arallocc function. */
+#define ardllocc   ardllocc_  /**< ardllocc function. */
+#define bort       bort_      /**< bort function. */
+#define bort_exit  bort_exit_ /**< exit function. */
+#define bvers      bvers_     /**< bvers function. */
+#define cadn30     cadn30_    /**< cadn30 function. */
+#define closbf     closbf_    /**< closbf function. */
+#define cmpia      cmpia_     /**< cmpia function. */
+#define cmpmsg     cmpmsg_    /**< cmpmsg function. */
+#define elemdx     elemdx_    /**< elemdx function. */
+#define gets1loc   gets1loc_  /**< gets1loc function. */
+#define ibfms      ibfms_     /**< ibfms function. */
+#define ichkstr    ichkstr_   /**< ichkstr function. */
+#define icvidx     icvidx_    /**< icvidx function. */
+#define ifxy       ifxy_      /**< ifxy function. */
+#define igetntbi   igetntbi_  /**< igetntbi function. */
+#define igetprm    igetprm_   /**< igetprm function. */
+#define igettdi    igettdi_   /**< igettdi function. */
+#define imrkopr    imrkopr_   /**< imrkopr function. */
+#define ipkm       ipkm_      /**< ipkm function. */
+#define ireadns    ireadns_   /**< ireadns function. */
+#define istdesc    istdesc_   /**< istdesc function. */
+#define iupb       iupb_      /**< iupb function. */
+#define iupbs01    iupbs01_   /**< iupbs01 function. */
+#define iupm       iupm_      /**< iupm function. */
+#define maxout     maxout_    /**< maxout function. */
+#define nemtab     nemtab_    /**< nemtab function. */
+#define nemtbb     nemtbb_    /**< nemtbb function. */
+#define nummtb     nummtb_    /**< nummtb function. */
+#define numtbd     numtbd_    /**< numtbd function. */
+#define openmb     openmb_    /**< openmb function. */
+#define pktdd      pktdd_     /**< pktdd function. */
+#define restd      restd_     /**< restd function. */
+#define stntbi     stntbi_    /**< stntbi function. */
+#define strnum     strnum_    /**< strnum function. */
+#define stseq      stseq_     /**< stseq function. */
+#define ufbint     ufbint_    /**< ufbint function. */
+#define ufbseq     ufbseq_    /**< ufbseq function. */
+#define uptdd      uptdd_     /**< uptdd function. */
+#define wrdesc     wrdesc_    /**< wrdesc function. */
+#define wrdlen     wrdlen_    /**< wrdlen function. */
 #endif
 
 /**
