--- a/.github/workflows/Linux.yml
+++ b/.github/workflows/Linux.yml
@@ -50,6 +50,7 @@ jobs:
         cd bufr
         mkdir build
         cd build
+        sleep 10
         cmake -DCMAKE_INSTALL_PREFIX=./install -DENABLE_PYTHON=ON ..
         make -j2 VERBOSE=1
         make install
