--- a/.github/workflows/MacOS.yml
+++ b/.github/workflows/MacOS.yml
@@ -32,6 +32,13 @@ jobs:
       with: 
         path: bufr
 
+    - name: cache-data
+      id: cache-data
+      uses: actions/cache@v2
+      with:
+        path: ~/data
+        key: data-1
+
     - name: build-bufr
       run: |
         cd bufr
@@ -48,3 +55,9 @@ jobs:
         cd bufr/build
         ctest --verbose --output-on-failure --rerun-failed
 
+    - name: cache-data
+      if: steps.cache-data.outputs.cache-hit != 'true'
+      run: |
+        mkdir ~/data
+        cp $GITHUB_WORKSPACE/bufr/build/test/bufr-11.6.0.tgz ~/data
+        
