--- a/.github/workflows/Linux.yml
+++ b/.github/workflows/Linux.yml
@@ -57,7 +57,7 @@ jobs:
         cd bufr
         mkdir build
         cd build
-        cmake -DCMAKE_INSTALL_PREFIX=./install -DENABLE_PYTHON=ON ..
+        cmake -DTEST_FILE_DIR=/home/runner/data -DCMAKE_INSTALL_PREFIX=./install -DENABLE_PYTHON=ON ..
         make -j2 VERBOSE=1
         make install
         cd python
