added data cache to all workflows

--- a/.github/workflows/MacOS.yml
+++ b/.github/workflows/MacOS.yml
@@ -41,6 +41,7 @@ jobs:
 
     - name: build-bufr
       run: |
+        ls -l /home/runner/data
         cd bufr
         mkdir build 
         cd build
