added data cache to all workflows

--- a/.github/workflows/MacOS.yml
+++ b/.github/workflows/MacOS.yml
@@ -41,7 +41,9 @@ jobs:
 
     - name: build-bufr
       run: |
-        ls -l /home/runner/data
+        ls -l ~/data
+        cd ~
+        pwd
         cd bufr
         mkdir build 
         cd build
